--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet.maskcanvas",
-  "version": "0.2",
+  "version": "0.3",
   "homepage": "https://github.com/domoritz/leaflet-maskcanvas",
   "authors": [
     "Dominik Moritz <domoritz@gmail.com>"
@@ -23,6 +23,6 @@
     "quadtree",
     "plugin"
   ],
-  "license": "AGPL",
+  "license": "MIT",
   "readmeFilename": "README.md"
 }
