Publish on npm (#27)
Hello, I'm not sure if you're interested but I've published your code on npm under `leaflet-maskcanvas`

This is the code that enables it. If you want to merge it I can transfer ownership of the package to you.

For publishing new versions to npm just run `npm run production`

Btw I tested with leaflet 1.3.1 and works just fine

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "leaflet.maskcanvas",
-  "version": "0.3",
+  "version": "0.4.0",
   "homepage": "https://github.com/domoritz/leaflet-maskcanvas",
   "authors": [
     "Dominik Moritz <domoritz@gmail.com>"
   ],
   "description": "A leaflet canvas layer for displaying large coverage data sets.",
-  "main": "src/L.TileLayer.MaskCanvas.js",
+  "main": "src/L.GridLayer.MaskCanvas.js",
   "devDependencies": {
-    "leaflet": "~0.7.0"
+    "leaflet": "~1.0.0"
   },
   "directories": {
     "example": "demo"
